--- a/src/index.html
+++ b/src/index.html
@@ -424,6 +424,149 @@
                     <div class="swiper-pagination advantages__swiper-pagination"></div>
                 </div>
             </section>
+
+            <section class="fermentation">
+                <div class="container">
+                    <h2 class="fermentation__title second-title">DuffBeer</h2>
+                    <p class="fermentation__info">Ключевой мировой игрок в области ферментации</p>
+
+                    <div class="fermentation__wrapper">
+                        <div class="fermentation__block fermentation__block_left">
+                            <div class="fermentation__item fermentation__item_big">
+                                <picture>
+                                    <source
+                                        media="(min-width: 1250px)"
+                                        srcset="./dist/img/fermentation/frm1.jpg" />
+                                    <source
+                                        media="(min-width: 930px)"
+                                        srcset="./dist/img/fermentation/frm1-m.jpg" />
+                                    <img
+                                        src="./dist/img/fermentation/frm1-m.jpg"
+                                        alt="img1"
+                                        class="fermentation__item-img fermentation__item-img_big" />
+                                </picture>
+                                <p
+                                    class="fermentation__item-text fermentation__item-text_big fermentation__item-text_right">
+                                    10 700+ сотрудников
+                                </p>
+                            </div>
+
+                            <div class="fermentation__item fermentation__item_small">
+                                <picture>
+                                    <img
+                                        src="./dist/img/fermentation/frm2.jpg"
+                                        alt="img1"
+                                        class="fermentation__item-img fermentation__item-img_small" />
+                                </picture>
+                                <p
+                                    class="fermentation__item-text fermentation__item-text_small fermentation__item-text_left">
+                                    570 экспертов R&D
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="fermentation__block fermentation__block_right">
+                            <div
+                                class="fermentation__item fermentation__item_small fermentation__item_blue">
+                                <svg
+                                    width="163"
+                                    height="73"
+                                    viewBox="0 0 163 73"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M4.80002 65.3581H20.3813V16.239C20.3813 14.7642 20.4318 13.2727 20.533 11.7645L7.58238 22.7748C7.24513 23.0429 6.90787 23.244 6.57061 23.3781C6.23336 23.4787 5.91296 23.5289 5.60943 23.5289C5.10355 23.5289 4.64825 23.4284 4.24355 23.2273C3.83884 22.9927 3.53531 22.7245 3.33295 22.4229L0.5 18.5517L22.0507 0H29.386V65.3581H43.6519V72.1956H4.80002V65.3581Z"
+                                        fill="white" />
+                                    <path
+                                        d="M81.8541 28.0537C84.7545 28.0537 87.5032 28.5397 90.1 29.5117C92.6969 30.4502 94.9734 31.8411 96.9295 33.6846C98.8856 35.4945 100.437 37.7401 101.584 40.4215C102.73 43.0693 103.304 46.1026 103.304 49.5214C103.304 52.8395 102.697 55.9231 101.482 58.772C100.268 61.621 98.5652 64.1012 96.373 66.2128C94.2146 68.3244 91.6008 69.9835 88.5318 71.1901C85.4628 72.3967 82.0902 73 78.4141 73C74.7717 73 71.4666 72.4302 68.4988 71.2906C65.5646 70.1175 63.0521 68.4752 60.9611 66.3636C58.8701 64.2186 57.2513 61.6377 56.1046 58.6212C54.9917 55.5712 54.4352 52.1692 54.4352 48.4153C54.4352 45.2647 55.1434 41.913 56.5599 38.3602C57.9764 34.8074 60.2191 30.9865 63.2882 26.8974L81.6518 2.31267C82.1239 1.70937 82.7816 1.20661 83.6247 0.804409C84.4678 0.368688 85.429 0.150827 86.5083 0.150827H94.5012L69.3588 31.7741C71.0788 30.601 72.9843 29.6961 75.0753 29.0592C77.1663 28.3889 79.4259 28.0537 81.8541 28.0537ZM63.1364 49.9738C63.1364 52.2865 63.4736 54.3981 64.1482 56.3085C64.8227 58.219 65.8007 59.8613 67.0823 61.2355C68.3976 62.6097 69.9827 63.6823 71.8376 64.4532C73.7262 65.1905 75.8678 65.5592 78.2623 65.5592C80.6906 65.5592 82.8828 65.1738 84.8388 64.4029C86.7949 63.632 88.4643 62.5595 89.8471 61.1853C91.2636 59.8111 92.3428 58.1855 93.0848 56.3085C93.8604 54.4316 94.2483 52.3871 94.2483 50.1749C94.2483 47.8287 93.8773 45.7172 93.1353 43.8402C92.3934 41.9298 91.3479 40.3209 89.9989 39.0138C88.6498 37.6731 87.031 36.6508 85.1424 35.947C83.2537 35.2431 81.1796 34.8912 78.92 34.8912C76.4917 34.8912 74.2996 35.3102 72.3435 36.1481C70.3874 36.9525 68.718 38.0585 67.3352 39.4663C65.9862 40.8405 64.9407 42.4493 64.1987 44.2927C63.4905 46.1026 63.1364 47.9963 63.1364 49.9738Z"
+                                        fill="white" />
+                                    <path
+                                        d="M162.5 0.150827V4.17287C162.5 5.31245 162.365 6.25092 162.095 6.98829C161.859 7.72567 161.606 8.34573 161.336 8.84848L131.338 69.0282C130.899 69.8997 130.292 70.6538 129.516 71.2906C128.741 71.8939 127.695 72.1956 126.38 72.1956H119.955L150.409 12.77C150.848 11.9321 151.286 11.1612 151.725 10.4573C152.197 9.75345 152.72 9.08311 153.293 8.44629H115.453C114.879 8.44629 114.357 8.22843 113.884 7.7927C113.446 7.32346 113.227 6.80395 113.227 6.23416V0.150827H162.5Z"
+                                        fill="white" />
+                                </svg>
+                                <p class="fermentation__item-text fermentation__item-text_small">
+                                    лет опыта на рынке хлебопечения
+                                </p>
+                            </div>
+
+                            <div class="fermentation__item fermentation__item_big">
+                                <picture>
+                                    <source
+                                        media="(min-width: 1250px)"
+                                        srcset="./dist/img/fermentation/frm4.jpg" />
+                                    <source
+                                        media="(min-width: 930px)"
+                                        srcset="./dist/img/fermentation/frm4-m.jpg" />
+                                    <img
+                                        src="./dist/img/fermentation/frm4-m.jpg"
+                                        alt="img1"
+                                        class="fermentation__item-img fermentation__item-img_big" />
+                                </picture>
+                                <p
+                                    class="fermentation__item-text fermentation__item-text_big fermentation__item-text_left">
+                                    25+ лет в России
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- <div class="swiper js_swiper_fermentation">
+                        <div class="swiper-wrapper fermentation__list">
+                            <div class="swiper-slide fermentation__item">
+                                <picture>
+                                    <source
+                                        media="(min-width: 1250px)"
+                                        srcset="./dist/img/fermentation/frm1.jpg" />
+                                    <source
+                                        media="(min-width: 930px)"
+                                        srcset="./dist/img/fermentation/frm1-m.jpg" />
+                                    <img
+                                        src="./dist/img/fermentation/frm1-m.jpg"
+                                        alt="img1"
+                                        class="fermentation__item-img" />
+                                </picture>
+                            </div>
+                            <div class="swiper-slide fermentation__item">
+                                <picture>
+                                    <source
+                                        media="(min-width: 1250px)"
+                                        srcset="./dist/img/fermentation/frm2.jpg" />
+                                    <source
+                                        media="(min-width: 930px)"
+                                        srcset="./dist/img/fermentation/frm2-m.jpg" />
+                                    <img
+                                        src="./dist/img/fermentation/frm2-m.jpg"
+                                        alt="img2"
+                                        class="fermentation__item-img" />
+                                </picture>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-prev fermentation__swiper-btn_prev">
+                        <svg
+                            width="11"
+                            height="8"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                            preserveAspectRatio="none">
+                            <path
+                                d="M.646 3.646a.5.5 0 000 .708l3.182 3.182a.5.5 0 10.708-.708L1.707 4l2.829-2.828a.5.5 0 10-.708-.708L.646 3.646zM11 3.5H1v1h10v-1z" />
+                        </svg>
+                    </div>
+                    <div class="swiper-button-next fermentation__swiper-btn_next">
+                        <svg
+                            width="12"
+                            height="8"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                            preserveAspectRatio="none">
+                            <path
+                                d="M11.354 4.354a.5.5 0 000-.708L8.172.464a.5.5 0 10-.708.708L10.293 4 7.464 6.828a.5.5 0 10.708.708l3.182-3.182zM0 4.5h11v-1H0v1z" />
+                        </svg>
+                    </div>
+                    <div class="swiper-pagination fermentation__swiper-pagination"></div> -->
+                </div>
+            </section>
         </main>
 
         <script src="./dist/swiper/swiper-bundle.min.js"></script>
