--- a/src/index.html
+++ b/src/index.html
@@ -484,8 +484,8 @@
                                         d="M162.5 0.150827V4.17287C162.5 5.31245 162.365 6.25092 162.095 6.98829C161.859 7.72567 161.606 8.34573 161.336 8.84848L131.338 69.0282C130.899 69.8997 130.292 70.6538 129.516 71.2906C128.741 71.8939 127.695 72.1956 126.38 72.1956H119.955L150.409 12.77C150.848 11.9321 151.286 11.1612 151.725 10.4573C152.197 9.75345 152.72 9.08311 153.293 8.44629H115.453C114.879 8.44629 114.357 8.22843 113.884 7.7927C113.446 7.32346 113.227 6.80395 113.227 6.23416V0.150827H162.5Z"
                                         fill="white" />
                                 </svg>
-                                <p class="fermentation__item-text fermentation__item-text_small">
-                                    лет опыта на рынке хлебопечения
+                                <p class="fermentation__item_blue-text">
+                                    лет&nbsp;опыта на&nbsp;рынке&nbsp;хлебопечения
                                 </p>
                             </div>
 
@@ -506,6 +506,42 @@
                                     class="fermentation__item-text fermentation__item-text_big fermentation__item-text_left">
                                     25+ лет в России
                                 </p>
+                            </div>
+                        </div>
+
+                        <div class="fermentation__block fermentation__block_left">
+                            <div class="fermentation__item fermentation__item_big">
+                                <picture>
+                                    <source
+                                        media="(min-width: 1250px)"
+                                        srcset="./dist/img/fermentation/frm5.jpg" />
+                                    <source
+                                        media="(min-width: 930px)"
+                                        srcset="./dist/img/fermentation/frm5-m.jpg" />
+                                    <img
+                                        src="./dist/img/fermentation/frm5-m.jpg"
+                                        alt="img1"
+                                        class="fermentation__item-img fermentation__item-img_big" />
+                                </picture>
+                                <p
+                                    class="fermentation__item-text fermentation__item-text_big fermentation__item-text_right">
+                                    Филиалы в 50 странах
+                                </p>
+                            </div>
+
+                            <div
+                                class="fermentation__item fermentation__item_small fermentation__item_blue">
+                                <svg
+                                    width="59"
+                                    height="78"
+                                    viewBox="0 0 59 78"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M47.1454 49.7198H59V55.2006C59 55.7738 58.8179 56.2574 58.4537 56.6514C58.1259 57.0455 57.5978 57.2425 56.8694 57.2425H47.1454V77.5H38.5685V57.2425H3.8787C3.15031 57.2425 2.51296 57.0455 1.96667 56.6514C1.45679 56.2216 1.12901 55.7021 0.983333 55.0932L0 50.2034L38.0769 0.5H47.1454V49.7198ZM38.5685 17.9634C38.5685 17.032 38.5867 16.029 38.6231 14.9543C38.696 13.8796 38.8235 12.7691 39.0056 11.6228L10.5435 49.7198H38.5685V17.9634Z"
+                                        fill="white" />
+                                </svg>
+                                <p class="fermentation__item_blue-text">направления деятельности</p>
                             </div>
                         </div>
                     </div>
